# House-Price-Intelligence-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  implementation_plan.md  nginx.conf  pyproject.toml  server.py  test_tools.py
api/: __init__.py  analytics_endpoint.py  chat_endpoint.py  feedback_endpoint.py  main.py  predict_endpoint.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/: Raw-Final-Rumah.csv  data_with_clusters.csv
dev/: debug_features.py  debug_importance.py  debug_lokasi.py  debug_model.py  debug_verify.py
frontend/: Dockerfile  next.config.js  package-lock.json  tailwind.config.js
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/src/app/: page.tsx  (+2 more)
kafka/: __init__.py  consumer_classification.py  consumer_clustering.py  consumer_feedback.py  consumer_regression.py  topics.py
knowledge/area_profiles/: beji.md  cinere.md  sawangan.md
knowledge/faqs/: how_price_is_calculated.md
knowledge/market_rules/: pricing_factors.md
metadata/: metadata_clustering.json  metadata_klasifikasi.json  metadata_regresi.json
mlflow_utils/: __init__.py  model_registry.py  tracker.py
models/: kmeans_model.pkl  lokasi_median_encoder.pkl  scaler.pkl  target_encoder.pkl
pipelines/: __init__.py  retrain_pipeline.py  retrain_trigger.py
prisma/: schema.prisma
rag/: cache.py  context_builder.py  embedder.py  retriever.py
scripts/: cleaning_pipeline_classification.py  cleaning_pipeline_clustering.py  cleaning_pipeline_regression.py  ingest_knowledge.py  ingest_properties.py  ingest_raw_data.py  predict_csv.py  retrain_clustering.py  retrain_from_csv.py  retrain_klasifikasi.py  setup_encoder.py  verify_pipeline.py
services/: __init__.py  feature_engineer.py  model_loader.py  predictor.py
(+77 files in other folders)
